# opam-nixify

./: .gitignore  Makefile  README.md  build-with-opam.sh  ocamlworld.nix  opam-nixify.opam  tezos.nix
examples/: opam-nixify-settings.opam  pkg-config.patch  sample.nixpam
handy/: jbuilder.nix  opam.nix.pl  opam2.nix  shell.sh  utop.nix
src/: jbuild  main.ml  nixify.ml  opam-nixify.install  opam-nixify.opam
